# opencv_learning

opencv_01/: CMakeLists.txt  main.cpp
